--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".DetailActivity" ></activity>
+        <activity android:name=".FavoritesActivity"></activity>
+        <activity android:name=".ReviewsActivity"></activity>
     </application>
 
 </manifest>
