--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
 
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/movie_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -21,9 +21,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity" ></activity>
-        <activity android:name=".FavoritesActivity"></activity>
-        <activity android:name=".ReviewsActivity"></activity>
+        <activity android:name=".DetailActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+            </intent-filter>
+        </activity>
+        <activity android:name=".ReviewsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
