--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+myApiTheGuardian="51d850fe504b9b9ebd6df40d48d30cf4"
 
 
